building 2 components assigreent completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>App component here</h1>
 <hr />
 <app-servers> </app-servers>
+<!-- assignment of creating 2 components (1manually and the other with cli) -->
+
+<div app-warning-alert></div>
+<div class="app-success-alert"></div>
